--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
         </div>
         <footer>
-            @Stagnant09 2024
+            <span class="github"><a href="https://github.com/Stagnant09" class="github" target="_blank">@Stagnant09</a></span> 2024
         </footer>
     </body>
     <script src="script.js"></script>
